// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Dialog base demo works fine 1`] = `
<base>
  <wx-view
    class="box"
  >
    <t-button
      block="{{true}}"
      data-key="showTextAndTitle"
      size="large"
      tClass="wrapper"
      theme="primary"
      variant="outline"
      bind:tap="showDialog"
    >
      反馈类-基础
    </t-button>
    <t-dialog
      confirmBtn="{{
        Object {
          "content": "知道了",
          "variant": "base",
        }
      }}"
      content="告知当前状态、信息和解决方法，等内容。描述文案尽可能控制在三行内"
      title="对话框标题"
      visible="{{false}}"
      bind:confirm="closeDialog"
    />
    <t-button
      block="{{true}}"
      data-key="showContentOnly"
      size="large"
      tClass="wrapper"
      theme="primary"
      variant="outline"
      bind:tap="showDialog"
    >
      反馈类-无标题
    </t-button>
    <t-dialog
      confirmBtn="{{
        Object {
          "content": "知道了",
          "variant": "base",
        }
      }}"
      content="告知当前状态、信息和解决方法，等内容。描述文案尽可能控制在三行内"
      visible=""
      bind:confirm="closeDialog"
    />
    <t-button
      block="{{true}}"
      data-key="showMultiTextAndTitle"
      size="large"
      tClass="wrapper"
      theme="primary"
      variant="outline"
      bind:tap="showDialog"
    >
      反馈类-内容超长
    </t-button>
    <t-dialog
      confirmBtn="{{
        Object {
          "content": "知道了",
          "variant": "base",
        }
      }}"
      title="对话框标题"
      visible="{{false}}"
      bind:confirm="closeDialog"
    >
      <wx-scroll-view
        class="long-content"
        scrollY="{{true}}"
        slot="content"
      >
        <wx-view
          class="content-container"
        >
          这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案
        这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案
        这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案
        这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案
        这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案
        这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案，这里是辅助内容文案
      
        </wx-view>
      </wx-scroll-view>
    </t-dialog>
  </wx-view>
</base>
`;

exports[`Dialog Dialog button demo works fine 1`] = `
<wx-button>
  <wx-view
    class="box"
  >
    <t-button
      block="{{true}}"
      data-type="hasCancelBtn"
      size="large"
      tClass="external-class"
      theme="primary"
      variant="outline"
      bind:tap="showDialog"
    >
      开放能力 按钮
    </t-button>
    <t-dialog
      id="t-dialog"
    />
  </wx-view>
</wx-button>
`;

exports[`Dialog Dialog command demo works fine 1`] = `
<command>
  <wx-view
    class="box"
  >
    <t-button
      block="{{true}}"
      size="large"
      tClass="external-class"
      theme="primary"
      variant="outline"
      bind:tap="showDialog"
    >
      命令行操作
    </t-button>
    <t-dialog
      id="t-dialog"
    />
  </wx-view>
</command>
`;

exports[`Dialog Dialog confirm demo works fine 1`] = `
<confirm>
  <wx-view
    class="box"
  >
    <t-button
      block="{{true}}"
      data-key="showConfirm"
      size="large"
      tClass="external-class"
      theme="primary"
      variant="outline"
      bind:tap="showDialog"
    >
      确认类-带标题
    </t-button>
    <t-dialog
      cancelBtn="取消"
      confirmBtn="{{
        Object {
          "content": "确定",
          "variant": "base",
        }
      }}"
      content="告知当前状态、信息和解决方法，等内容。描述文案尽可能控制在三行内"
      title="对话框标题"
      visible="{{false}}"
      bind:cancel="closeDialog"
      bind:confirm="closeDialog"
    />
    <t-button
      block="{{true}}"
      data-key="showWarnConfirm"
      size="large"
      tClass="external-class"
      theme="primary"
      variant="outline"
      bind:tap="showDialog"
    >
      确认类-无标题
    </t-button>
    <t-dialog
      cancelBtn="取消"
      confirmBtn="{{
        Object {
          "content": "警示操作",
          "theme": "danger",
          "variant": "base",
        }
      }}"
      content="告知当前状态、信息和解决方法，等内容。描述文案尽可能控制在三行内"
      visible="{{false}}"
      bind:cancel="closeDialog"
      bind:confirm="closeDialog"
    />
  </wx-view>
</confirm>
`;

exports[`Dialog Dialog inputDialog demo works fine 1`] = `
<inputDialog>
  <wx-view
    class="box"
  >
    <t-button
      block="{{true}}"
      data-key="showWithInput"
      size="large"
      tClass="external-class"
      theme="primary"
      variant="outline"
      bind:tap="showDialog"
    >
      单行标题
    </t-button>
    <t-dialog
      cancelBtn="取消"
      confirmBtn="确认"
      title="带输入框对话框"
      visible="{{false}}"
      bind:cancel="closeDialog"
      bind:confirm="closeDialog"
    >
      <wx-input
        placeholder="输入文案"
        placeholderClass="placeholder"
        slot="content"
      />
    </t-dialog>
    <t-button
      block="{{true}}"
      data-key="showTextAndTitleWithInput"
      size="large"
      tClass="external-class"
      theme="primary"
      variant="outline"
      bind:tap="showDialog"
    >
      带说明文本
    </t-button>
    <t-dialog
      cancelBtn="取消"
      confirmBtn="确认"
      content="告知当前状态、信息和解决方法，等内容。描述文案尽可能控制在三行内"
      title="带输入框对话框"
      visible="{{false}}"
      bind:cancel="closeDialog"
      bind:confirm="closeDialog"
    >
      <wx-input
        placeholder="输入文案"
        placeholderClass="placeholder"
        slot="content"
      />
    </t-dialog>
  </wx-view>
</inputDialog>
`;
